set body overflow-x to clip to fix sticky navbar

--- a/src/index.css
+++ b/src/index.css
@@ -442,7 +442,7 @@ hr {
   .body {
     min-height: 100%;
     width: 100%;
-    overflow-x: hidden;
+    overflow-x: clip;
   }
 
   .header {
